--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "firebase": "^4.9.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.6",
+    "tslib": "^1.9.0",
     "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
